# UltraFAV

./: LICENSE  README.md  pyproject.toml
ultrafav/inference/: predict_from_raw_data.py
ultrafav/run/: run_training.py
ultrafav/training/network_architectures/artery_vein_seg/: neighbor_connec_reg_net_v2.py  to_pixel_samples.py
ultrafav/training/nnUNetTrainer/: NCRTrainerV2.py
